# Algo-Benchmaker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Benchmark.hpp  GUI.hpp  Maze.hpp
include/pathfinders/: AStar.hpp  BFS.hpp  DFS.hpp  Dijkstra.hpp  GreedyBestFirst.hpp  JPS.hpp  Pathfinder.hpp
resources/: sample_maze.txt
src/: GUI.cpp  Maze.cpp  main.cpp
tests/: TestRunner.cpp
